Change the page title

--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fi">
   <head>
-    <title>Base</title>
+    <title>Siilit kartalla</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./src/index.tsx"></script>
     <style>body {margin: 0px}</style>
